--- a/about.html
+++ b/about.html
@@ -254,9 +254,9 @@
                           <a href="https://coursera.org/share/5700d41600f7b443aa55b65ea05c40ff" class="d-block w-100">
                             <div class="awards-item">
                               <div class="award-name">
-                                <div class="icon" style="width: 91px;">
+                                <!-- <div class="icon" style="height: 40px; height: 40px;">
                                   <img src="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/favicon-v2-96x96.png" alt="adobe">
-                                </div>
+                                </div> -->
                                 <div class="text">
                                   <h4 class="title">Supervised Machine Learning: Regression and Classification                                  </h4>
                                   <p class="year">2022 - 2023</p>
@@ -296,9 +296,9 @@
                           <a href="https://coursera.org/share/70dc3c3841151d0ee60cca3fe608c809" class="d-block w-100">
                             <div class="awards-item">
                               <div class="award-name">
-                                <div class="icon" style="width: 136px;">
+                                <!-- <div class="icon" style="height: 40px; height: 40px;">
                                   <img src="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/favicon-v2-96x96.png" alt="adobe">
-                                </div>
+                                </div> -->
                                 <div class="text">
                                   <h4 class="title">Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning                                  </h4>
                                   <p class="year">2022 - 2023</p>
@@ -338,9 +338,9 @@
                           <a href="https://coursera.org/share/f5c24e90cde606d85c4c02307ae81330" class="d-block w-100">
                             <div class="awards-item">
                               <div class="award-name">
-                                <div class="icon" style="width: 46px;">
+                                <!-- <div class="icon" style="height: 40px; height: 40px;">
                                   <img src="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/favicon-v2-96x96.png" alt="adobe">
-                                </div>
+                                </div> -->
                                 <div class="text">
                                   <h4 class="title">Machine Learning with Python</h4>
                                   <p class="year">2022 - 2023</p>
