--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
-<body class="dark-theme">
+<body class="dark-theme dark-theme dark-theme">
 
   <div id="page-content">
     <!-- header part start -->
